# IA

Proyecto_IA/: Proyecto_IA.ipynb  Proyecto_IA_nuevo.ipynb
Tarea_01_Busquedas/: CMakeLists.txt  graficos.h  graph.h  main.cpp
Tarea_02_MinMax/: main.cpp
Tarea_03_Coloreo/: CMakeLists.txt  main.cpp
Tarea_04_Geneticos/function_geneticAlg/: main.cpp  script.py
Tarea_04_Geneticos/tsp_geneticAlg/Tarea_01/: CMakeLists.txt  geneticAlgorithm.h  graficos.h  graph.h  main.cpp  script.py
Tarea_05_Perceptron/perceptron/: chlorine.hpp  helper.cpp  helper.h  perceptron.cpp  perceptron.h  plot  plot.cpp  test  test.cpp  train  train.cpp
Tarea_05_Perceptron/perceptron_gpu/: Makefile  helper.cu  helper.h  test.cu  train.cu
Tarea_06_MLP/: MLP.cpp  epoch_loss.txt
